sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:2: error: ':' expected but ')' found.
def bubbleSort(tab)  {
                  ^AlgBubbleSort1:19: error: identifier expected but '}' found.
}
^